# pacman-repo-builder

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  deploy.yaml  test.yaml
ci/github-actions/arch-run/: Dockerfile  action.yml  run.bash
patches/: makepkg7
src/: args.rs  cmd.rs  utils.rs
src/app/: run.rs
src/cmd/: copyright.rs
src/utils/: copyright_terms.rs  custom_makepkg.rs
tests/: outdated.rs
tests/fixtures/outdated/__template__/: build-pacman-repo.yaml
tests/fixtures/outdated/arch-filter-any/: build-pacman-repo.yaml
tests/fixtures/outdated/arch-filter-x86_64/: build-pacman-repo.yaml
tests/fixtures/outdated/record-failed-builds-empty/: build-pacman-repo.yaml
tests/fixtures/outdated/record-failed-builds-some/: build-pacman-repo.yaml  failed-builds.yaml
tests/fixtures/sort/: build-pacman-repo.yaml
tests/fixtures/sync-srcinfo/all-sync/: build-pacman-repo.yaml
tests/fixtures/sync-srcinfo/none-sync/: build-pacman-repo.yaml
tests/fixtures/sync-srcinfo/some-sync/: build-pacman-repo.yaml
