[package]
name = "pacman-repo-builder"
description = "Build a custom pacman repository from a collection of PKGBUILD directories"
version = "0.0.0-rc.65"
authors = ["khai96_ <hvksmr1996@gmail.com>"]
edition = "2021"
readme = "README.md"
license = "GPL-3.0"
documentation = "https://docs.rs/pacman-repo-builder"
repository = "https://github.com/KSXGitHub/pacman-repo-builder.git"
keywords = [
  "pacman",
  "arch",
  "archlinux",
  "pkgbuild",
]
categories = ["command-line-utilities"]
include = [
  "/src",
  "/Cargo.toml",
  "/README.md",
  "/LICENSE.md",
]

[lib]
name = "pacman_repo_builder"
path = "src/lib.rs"

[[bin]]
name = "build-pacman-repo"
path = "src/main.rs"

[dependencies]
argh = "^0.1.12"
pipe-trait = "^0.4.0"
smart-default = "^0.7.1"
serde_yaml = "^0.9.34"
num-bigint = "^0.4.6"
num-traits = "^0.2.19"
alpm = "^4.0.1"
git2 = "^0.18.3"
petgraph = "^0.6.5"
indexmap = "^2.2.5"
itertools = "^0.12.1"
rayon = "^1.10.0"
sha-1 = "^0.10.1"
hex-literal = "^0.4.1"
hex_fmt = "^0.3.0"
command-extra = "^1.0.0"
pacmanconf = "^2.0.0"
reflink = "^0.1.3"

[dependencies.serde]
version = "^1.0.214"
features = ["derive"]

[dev-dependencies]
tempfile = "^3.13.0"
fs_extra = "^1.2.0"
pretty_assertions = "^1.4.1"

[profile.release]
opt-level = "s"
